tests/NormalTests/paczka1/fuzzy1/75172551.err
Error in line 1: M1OHMn2 A547 10,2
Error in line 5: vvN A629 47,8
Error in line 6: M1OHMn2 S938 976,5
Error in line 10: A649 A649 7,8
Error in line 14: 5VKXFegJ S938 68,6
Error in line 12: A649 S938 39,8
Error in line 24: tHs7JVP3NiC A649 10,2
Error in line 35: A649 A547 114,3
